--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="bg-dark">
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary sticky-top">
         <a class="navbar-brand" href="#">
-            <p class="brand"> OLDBUTGOLD&reg;</p>
+            <p class="brand mt-3"> OLDBUTGOLD&reg;</p>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,8 +61,9 @@
     </div>
     <br>
     <br>
-    <h2>CARS</h2>
-    <a name="car">
+   <div>
+        <a name="car"></a>
+    <h2 class="auto">CARS</h2>
         <div class="row">
             <div class="card-deck cars">
                 <div class="card bg-dark">
@@ -101,16 +102,17 @@
                 </div>
             </div>
         </div>
+    </div>
         <a name="price"></a>
         <div class="container-fluid text-center text-white border border-secondary price">
-            <h2>OUR PACKAGES</h2>
+            <h2 class="auto">OUR PACKAGES</h2>
             <br>
             <div class="row">
                 <div class="col d-flex justify-content-center">
                     <div class="card mb-5" style="width: 18rem;">
                         <div class="card-body bg-dark">
                             <h5 class="card-title"> <strong> STANDARD PACKAGE</strong></h5>
-                            <h6 class="card-subtitle mb-2 text-muted">14. <sup>99</sup>€/h</h6>
+                            <h6 class="card-subtitle mb-2 packagecolor">14. <sup>99</sup>€/h</h6>
                             <p class="card-text">Doesn´t matter if just for a hour or a couple of hours. You decide!</p>
                             <br>
                             It´s up to you!
@@ -128,7 +130,7 @@
                     <div class="card mb-5" style="width: 18rem;">
                         <div class="card-body bg-dark">
                             <h5 class="card-title"> <strong> PREMIUM PACKAGE</strong> </h5>
-                            <h6 class="card-subtitle mb-2 text-muted">199. <sup>99</sup>€/Day</h6>
+                            <h6 class="card-subtitle mb-2 packagecolor">199. <sup>99</sup>€/Day</h6>
                             <p class="card-text">Tired of counting the minutes? Go for a full day of oldtimer joy! <br>
                                 <br>
                                 Take the Premium Package and enjoy the spirit of vintage!</p>
@@ -143,8 +145,9 @@
                     <div class="card mb-5" style="width: 18rem;">
                         <div class="card-body bg-dark">
                             <h5 class="card-title"> <strong> WEEKEND PACKAGE</strong></h5>
-                            <h6 class="card-subtitle mb-2 text-muted">299. <sup>99</sup>€</h6>
-                            <p class="card-text">A day is not enough? Take the "WEEKEND PACKAGE" and enjoy a weekend on the road!</p>
+                            <h6 class="card-subtitle mb-2 packagecolor">299. <sup>99</sup>€</h6>
+                            <p class="card-text">A day is not enough? Take the "WEEKEND PACKAGE" and enjoy a weekend on
+                                the road!</p>
                             <br>
                             <br>
                             <br>
